--- a/Ejercicio7/index.html
+++ b/Ejercicio7/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ejercicio 1</title>
+    <style>
+        html {
+            margin: 5% 20% 5% 20%;
+            text-align: center;
+            font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            background-color: black;
+            padding: auto;
+        }
+    </style>
 </head>
-<body>
-    
+<body style="background-color:aliceblue; padding: 10%;">
 </body>
 </html>
