añade todos los ejercicios

--- a/Ejercicio1/index.html
+++ b/Ejercicio1/index.html
@@ -15,5 +15,7 @@
     </style>
 </head>
 <body style="background-color:aliceblue; padding: 10%;">
+    <h1>Ejercicio 1</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis hic quasi alias id veniam deleniti iure, aperiam ipsam? Minima necessitatibus quisquam earum ut quae porro explicabo? Error rerum laudantium non!</p>
 </body>
 </html>
