--- a/Ejercicio2/index.html
+++ b/Ejercicio2/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejercicio 1</title>
+    <title>Ejercicio 2</title>
     <style>
         html {
             margin: 5% 20% 5% 20%;
@@ -15,5 +15,14 @@
     </style>
 </head>
 <body style="background-color:aliceblue; padding: 10%;">
+    <h1>Ejercicio 2</h1>
+    <hr>
+    <h3>Subtitulo 1</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque voluptatibus nemo dicta <b>aspernatur</b>  veritatis enim, numquam mollitia ipsa quas ea. Reiciendis labore ad aut <b>excerciotanem</b> dicta, quod quaerat! Nemo, quis!
+    Saepe nulla rerum adipisci <b>architecto</b> excepturi recusandae in dolorem repellendus vitae provident, quidem assumenda. Expedita dolores nam, quidem maxime aut neque in quo incidunt asperiores reprehenderit, quisquam rerum adipisci cumque!</p>
+    <hr>
+    <h3>Subtitulo 2</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing <i>elit</i>. Incidunt voluptatem esse repellat explicabo, voluptate eveniet at non suscipit <i>sapiente</i> quam? Asperiores quisquam rem fugit suscipit pariatur consectetur corrupti voluptas officia.</p>
+    <p>Perspiciatis repudiandae maxime culpa molestias inventore <i>debitis</i> adipisci non consequuntur cum, illo rerum accusantium cumque eius <i>voluptate</i> modi quae vitae quo numquam placeat laudantium repellendus. Fuga consequuntur impedit accusamus quae.</p>
 </body>
 </html>
