--- a/Ejercicio3/index.html
+++ b/Ejercicio3/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejercicio 1</title>
+    <title>Ejercicio 3</title>
     <style>
         html {
             margin: 5% 20% 5% 20%;
@@ -15,5 +15,14 @@
     </style>
 </head>
 <body style="background-color:aliceblue; padding: 10%;">
+    <h2>Titulo 1</h2>
+    <hr>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat quam consectetur explicabo doloribus fugit expedita dolorem laudantium, provident est sunt cupiditate vitae, et vero hic eaque sit ducimus totam! Sunt.
+    Ipsam voluptatem fuga amet eius ex, cum voluptas numquam pariatur, iusto quisquam non, laudantium aliquid alias consectetur rem? Aperiam dolorem iusto quam non illum! Consequatur saepe nemo ex ipsa quas.</p>
+    <hr>
+    <h2>Titulo 2</h2>
+    <a href="https://www.google.com/">Google</a>
+    <br>
+    <a href="https://immune.institute/">IMMUNE</a>
 </body>
 </html>
