--- a/Ejercicio4/pagina2.html
+++ b/Ejercicio4/pagina2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejercicio 6</title>
+    <title>Ejercicio 4.1</title>
     <style>
         html {
             margin: 5% 20% 5% 20%;
@@ -12,25 +12,10 @@
             background-color: black;
             padding: auto;
         }
-        ul {
-            list-style-position: inside;
-            text-align: center;
-        }
     </style>
 </head>
 <body style="background-color:aliceblue; padding: 10%;">
-    <h1>Pagina de Listas</h1>
-    <ul>
-        <li>Java</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Python</li>
-    </ul>
-    <hr>
-    <ol>
-        <li>Html</li>
-        <li>Head</li>
-        <li>Body</li>
-    </ol>
+    <h1>Pagina Secundaria</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum voluptates sed expedita nemo. Ab in consequuntur sunt officiis dolorem <a href="index.html">Volver al index</a>, saepe perspiciatis blanditiis distinctio libero repellendus asperiores odio amet?</p>
 </body>
 </html>
