--- a/Ejercicio7/index.html
+++ b/Ejercicio7/index.html
@@ -1,19 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejercicio 1</title>
+    <title>Ejercicio 7</title>
     <style>
         html {
             margin: 5% 20% 5% 20%;
             text-align: center;
-            font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             background-color: black;
-            padding: auto;
+        }
+        ul {
+            list-style-position: inside;
+            text-align: center;
         }
     </style>
 </head>
+
 <body style="background-color:aliceblue; padding: 10%;">
+    <h1>Paginas de aprendizaje</h1>
+    <ul>
+        <li><a href="https://www.codecademy.com/">CodeAcademy</a></li>
+        <li><a href="https://www.freecodecamp.org/">FreeCodeCamp</a></li>
+        <li><a href="https://www.edx.org/">Edx</a></li>
+        <li><a href="https://www.coursera.org/">Coursera</a></li>
+        <li><a href="https://www.udemy.com/">Udemy</a></li>
+    </ul>
 </body>
+
 </html>
