--- a/Ejercicio8/index.html
+++ b/Ejercicio8/index.html
@@ -1,19 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejercicio 1</title>
+    <title>Ejercicio 8</title>
     <style>
         html {
             margin: 5% 20% 5% 20%;
             text-align: center;
-            font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             background-color: black;
             padding: auto;
         }
+        img {
+            width: 200px;
+        }
+        ol {
+            list-style-position: inside;
+            text-align: center;
+        }
     </style>
 </head>
+
 <body style="background-color:aliceblue; padding: 10%;">
+    <h1>Top Series</h1>
+    <ol>
+        <li><br><img src="images/mr.robot.jpg" alt="Serie Mr. Robot"></li>
+        <hr>
+        <li><br><img src="images/Breaking-Bad.jpg" alt="Serie Breaking Bad"></li>
+        <hr>
+        <li><br><img src="https://pics.filmaffinity.com/Dark_Serie_de_TV-111203947-large.jpg" alt="Serie Dark"></li>
+        <hr>
+        <li><br><img src="https://pics.filmaffinity.com/the_oa-314275587-mmed.jpg" alt="Serie The OA"></li>
+    </ol>
 </body>
+
 </html>
