--- a/Ejercicio4/index.html
+++ b/Ejercicio4/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejercicio 1</title>
+    <title>Ejercicio 4</title>
     <style>
         html {
             margin: 5% 20% 5% 20%;
@@ -15,5 +15,8 @@
     </style>
 </head>
 <body style="background-color:aliceblue; padding: 10%;">
+    <h1>Pagina Principal</h1>
+    <hr>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum voluptates sed expedita nemo. Ab in consequuntur sunt officiis dolorem <a href="pagina2.html">Pagina Secundaria</a>, saepe perspiciatis blanditiis distinctio libero repellendus asperiores odio amet?</p>
 </body>
 </html>
